[project]
name = "pullman"
version = "0.10.0"
description = "🥞 Manage ghstack pull requests 🥞"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "bs4>=0.0.2,<0.0.3",
    "requests>=2.32.3,<3",
]

[project.scripts]
pullman = "pullman:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
