[project]
name = "pullman"
version = "0.10.0"
description = "🥞 Manage ghstack pull requests 🥞"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "bs4>=0.0.2,<0.0.3",
    "requests>=2.32.3,<3",
]

[project.scripts]
pullman = "pullman:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage]
[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "pyupgrade>=3.21.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
